--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "devDependencies": {
     "autoprefixer": "^10.4.20",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^4.0.0"
+  },
+  "scripts": {
+    "dev": "npx @tailwindcss/cli -i styles/input.css -o styles/build.css --watch",
+    "build": "npx @tailwindcss/cli -i styles/input.css -o styles/build.css --minify"
   }
 }
